--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,6 @@
     "qunit": "~1.15.0"
   },
   "devDependencies": {
-    "momentjs": "~2.9.0",
-    "lodash": "~2.4.1"
+    "momentjs": "~2.9.0"
   }
 }
